--- a/public_html/index.html
+++ b/public_html/index.html
@@ -13,9 +13,9 @@
             {{error}}
         </div>
 
-        <form name="searchUser">
+        <form name="searchUser" ng-submit="search(username)">
             <input type="search" required placeholder="Username to find" ng-model="username" /> 
-            <input type="submit" value="Search" ng-click="search(username)" /> 
+            <input type="submit" value="Search" /> 
         </form>
 
         <div ng-show="user">
