include countdown service

--- a/public_html/index.html
+++ b/public_html/index.html
@@ -5,6 +5,7 @@
         <link rel="stylesheet" href="css/style.css">
         <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.4.5/angular.min.js"></script>
         <script src="js/script.js"></script>
+        <link rel="shortcut icon" href="">  <!-- fix favicon.ico error -->
     </head>
     <body ng-controller="MainController">
         <h1>{{message}}</h1>
@@ -13,6 +14,7 @@
             {{error}}
         </div>
 
+        {{countdown}}
         <form name="searchUser" ng-submit="search(username)">
             <input type="search" required placeholder="Username to find" ng-model="username" /> 
             <input type="submit" value="Search" /> 
