add UI related services

--- a/public_html/userdetails.html
+++ b/public_html/userdetails.html
@@ -1,4 +1,4 @@
-<article>
+<article id="userDetails">
     <h2>Name: {{user.name}}</h2>
     <img ng-src="{{user.avatar_url}}" title="{{user.name}}" height="100" width="100" />
 </article>
