add custom service

--- a/public_html/index.html
+++ b/public_html/index.html
@@ -2,10 +2,11 @@
 <html ng-app="app">
     <head>
         <title>My Angular Application</title>
+        <link rel="shortcut icon" href="">  <!-- fix favicon.ico error -->
         <link rel="stylesheet" href="css/style.css">
         <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.4.5/angular.min.js"></script>
         <script src="js/script.js"></script>
-        <link rel="shortcut icon" href="">  <!-- fix favicon.ico error -->
+        <script src="js/github.js"></script>
     </head>
     <body ng-controller="MainController">
         <h1>{{message}}</h1>
