--- a/public_html/index.html
+++ b/public_html/index.html
@@ -1,27 +1,19 @@
 <!DOCTYPE html>
-<html ng-app="app">
+<html ng-app="googleViewer">
     <head>
         <title>My Angular Application</title>
         <link rel="shortcut icon" href="">  <!-- fix favicon.ico error -->
         <link rel="stylesheet" href="css/style.css">
         <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.4.5/angular.min.js"></script>
-        <script src="js/script.js"></script>
+        <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.2.1/angular-route.min.js"></script>
+        <script src="js/app.js"></script>
+        <script src="js/MainController.js"></script>
+        <script src="js/UserController.js"></script>
+        <script src="js/RepoController.js"></script>
         <script src="js/github.js"></script>
     </head>
     <body ng-controller="MainController">
-        <h1>{{message}}</h1>
-
-        <div id="status">
-            {{error}}
-        </div>
-
-        {{countdown}}
-        <form name="searchUser" ng-submit="search(username)">
-            <input type="search" required placeholder="Username to find" ng-model="username" /> 
-            <input type="submit" value="Search" /> 
-        </form>
-
-        <div ng-include="'userdetails.html'" ng-show="user">
-        </div>
+        <h1>GitHub Viewer</h1>
+        <div ng-view></div>
     </body>
 </html>
